source_set("d3d10") {
  sources = [
    "d3d10_compositor.cpp",
    "d3d10_gpu_layer.cpp",
    "d3d10_app.cpp",
    "d3d10_texture_tile.cpp",
    "common/effects.cpp",
    "common/font.cpp",
    "common/inputs.cpp",
    "common/render_states.cpp",
    "UICompositor.rc",
    "hard3dtransform.cpp",
  ]
  
  cflags = [ "-DENABLE_D3D10" ]
  cflags += [
    "/wd4005",  # 'DXGI_STATUS_OCCLUDED': macro redefinition
  ]

  include_dirs = [
    win_sdk + "/Include/" + win_sdk_version + "/um",
    directx_sdk + "/Include"
  ]
  lib_dirs = [
    directx_sdk + "/Lib/x64"
  ]
  libs = [
    "atls.lib",
    "d3d10.lib",
    "d3dx10.lib",
    "D3D10_1.lib",
  ]
}