import("//ui/gpu/gpu.gni")

config("d3d12_config") {
  defines = [ "ENABLE_D3D12" ]

  # d3d12不依赖于directx sdk!
  include_dirs = [
    win_sdk + "/Include/" + win_sdk_version + "/um",
  ]
  libs = [
    "atls.lib",
    "D3d12.lib", 
    "dxgi.lib",
  ]
}

source_set("d3d12") {
  public_configs = [":d3d12_config"]

  sources = [
    "d3d12_gpu.cpp",
    "d3d12_gpu.h",
    "d3d12_app.cpp",
    "d3d12_app.h",
    "d3d12_compositor.cpp",
    "d3d12_compositor.h",
    "d3d12_swapchain.cpp",
    "d3d12_swapchain.h",
    "d3d12_command_queue.cpp",
    "d3d12_command_queue.h",
  ]

  include_dirs = [
    "//ui/",
    "//ui/gpu/",
  ]  
  cflags = [
    "/wd4005",  # 'DXGI_STATUS_OCCLUDED': macro redefinition
  ]
}